<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_padding"
        tools:context=".MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_text"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:layout_marginBottom="@dimen/margin_result"
            android:background="@drawable/result_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/button_copy"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/button_copy"
                android:gravity="center"
                android:textAppearance="@style/ResultTextAppearance"

                tools:text="QqWwEe" />

            <ImageButton
                android:id="@+id/button_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:onClick="buttonClicked"
                android:theme="@style/CopyButton" />
        </RelativeLayout>

        <EditText
            android:id="@+id/source_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_edit_text"
            tools:text="ЙйЦцУу" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/quality_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                tools:text="(качество)" />

            <ImageView
                android:id="@+id/quality"
                android:layout_width="0dp"
                android:layout_height="@dimen/indicator_height"
                android:layout_weight="4"

                android:src="@drawable/quality_indicator" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_new_password"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <CheckBox
            android:id="@+id/check_uppercase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_uppercase" />

        <CheckBox
            android:id="@+id/check_digits"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_digits" />

        <CheckBox
            android:id="@+id/check_special_symbols"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/check_special_symbols" />

        <SeekBar
            android:id="@+id/length_password_seek_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="12" />

        <TextView
            android:id="@+id/length_password_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="plurals" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_result"
            android:layout_marginBottom="@dimen/margin_result"
            android:background="@drawable/result_background"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/result_generated_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/button_copy_generated"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_toStartOf="@id/button_copy_generated"
                android:gravity="center"
                android:textAppearance="@style/ResultTextAppearance"

                tools:text="QqWwEe" />

            <ImageButton
                android:id="@+id/button_copy_generated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:onClick="buttonClicked"
                android:theme="@style/CopyButton" />
        </RelativeLayout>

        <Button
            android:id="@+id/button_generate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_generate_button"
            android:layout_marginEnd="@dimen/margin_generate_button"
            android:background="@color/colorPrimary"
            android:text="@string/generate_password"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>